--- a/css/mobile-landing.css
+++ b/css/mobile-landing.css
@@ -32,12 +32,15 @@ header {
   padding: 0 1.1rem;
   
   z-index: 2;
-  
-/*   overflow: auto; */
 }
 @media (min-width: 544px) {
   .header__container{
     height: 159px;
+  }
+}
+@media (min-width: 768px) {
+  .header__container {
+    height: 187px;
   }
 }
 
@@ -89,6 +92,13 @@ header {
   .header__date {
     font-size: 1.4rem;
   }
+}
+
+a.statistics_highlight:link, 
+a.statistics_highlight:visited, 
+a.statistics_highlight:hover, 
+a.statistics_highlight:active {
+  color: #83c500;
 }
 
 
@@ -146,23 +156,52 @@ header {
   }
 }
 
+a.signup__input:link, 
+a.signup__input:visited, 
+a.signup__input:hover, 
+a.signup__input:active {
+  text-decoration: none;
+  color: #fff;
+}
+
+.success {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 2rem auto 0;
+  
+/*   padding: 1rem; */
+/*   margin: 3rem auto 2rem; */
+}
+@media (min-width: 544px) {
+  .success {
+    max-width: 750px;
+    font-size: 1.2rem;
+    line-height: 1.75rem;
+  }
+}
+
 .container2 {
   margin: auto;
   position: absolute;
-  top: 20%;
+  top: 60%;
   right: 0;
-  bottom: 0;
+
   left: 0;
   overflow: hidden;
 /*   height: 40%; */
   z-index: 1;
+  
+  height: 751px;
 }
 
 .smartphone-img {
-  margin-top: 15rem;
+/*   margin-top: 20rem; */
 }
 
 
+
+/* FEATURES */
 .features {
   height: 100%;
   list-style-type: none;
@@ -332,7 +371,7 @@ footer {
 
 .footer__container {
 /*   height: 168px; */
-  height: 267px;
+  height: 231px;
   padding: 0 1.1rem;
 }
 
