--- a/css/landing.css
+++ b/css/landing.css
@@ -2,168 +2,487 @@
   box-sizing: border-box;
 }
 
-
-
 body {
-  color: #fff;
-  font-size: 1.25rem;
+  font-size: 1.25em;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
+  
+  min-width: 320px;
+}
+
+
+
+/* HEADER */
+
+header {
+  position: relative;
+  height: 100%;
+  color: #fff;
+  background-color: #29303a;
+/*   padding: 3rem 2rem; */
+  
+  overflow: hidden;
+  
+  min-width: 320px;
+  min-height: 480px;
+}
+
+.header__container {
+  height: 168px;
+  padding: 0 1.1rem;
+  
+  z-index: 2;
+
+}
+@media (min-width: 544px) {
+  .header__container{
+    height: 159px;
+  }
+}
+@media (min-width: 768px) {
+  .header__container {
+    height: 187px;
+  }
+}
+
+.header__logo {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin: 2.5rem auto;
+}
+@media (min-width: 544px) {
+  .header__logo {
+    text-align: left;
+    margin: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .header__logo {
+    font-size: 3rem;
+  }
+}
+
+.header__intro {
+  font-size: 2.2rem;
+  font-weight: 400;
+  margin: 0 auto;
+}
+@media (min-width: 544px) {
+  .header__intro {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 768px) {
+  .header__intro {
+    font-size: 4rem;
+  }
+}
+
+.header__date {
+  font-size: .78rem;
+  font-weight: 400;
+  margin: 0 auto;
+}
+@media (min-width: 544px) {
+  .header__date {
+    font-size: 1.06rem;
+  }
+}
+@media (min-width: 768px) {
+  .header__date {
+    font-size: 1.4rem;
+  }
+}
+
+a.statistics_highlight:link, 
+a.statistics_highlight:visited, 
+a.statistics_highlight:hover, 
+a.statistics_highlight:active {
+  color: #83c500;
+}
+
+/* FORM */
+
+.signup {
+  width: 100%;
+  max-width: 280px;
+  margin: 2rem auto 0;
+}
+@media (min-width: 544px) {
+  .signup {
+    max-width: 378px;
+    font-size: 0;
+  }
+}
+@media (min-width: 768px) {
+  .signup {
+    max-width: 500px;
+  }
+}
+
+.signup__input {
+  display: block;
+  padding: 10px;
+  border: 0;
+  font-size: 1rem;
+  width: 100%;
+  text-align: center;
+}
+@media(min-width: 544px) {
+  .signup__input {
+    display: inline-block;
+    padding: 15px 10px;
+  }  
+}
+
+.signup__input--streamer {
+  color: #333;
+}
+@media(min-width: 544px) {
+  .signup__input--streamer {
+    width: 75%;
+  }
+}
+
+.signup__input--submit {
+  font-weight: 700;
+  letter-spacing: .15rem;
+}
+@media(min-width: 544px) {
+  .signup__input--submit {
+    width: 25%;
+  }
+}
+
+a.signup__input:link, 
+a.signup__input:visited, 
+a.signup__input:hover, 
+a.signup__input:active {
+  text-decoration: none;
+  color: #fff;
+}
+
+.success {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 2rem auto 0;
+}
+@media (min-width: 544px) {
+  .success {
+    max-width: 750px;
+    font-size: 1.2rem;
+    line-height: 1.75rem;
+  }
+}
+
+.container2 {
+  margin: auto;
+  position: absolute;
+  top: 60%;
+  right: 0;
+  left: 0;
+  overflow: hidden;
+/*   height: 40%; */
+  z-index: 1;
+  
+  height: 751px;
+}
+
+.smartphone-img {
+/*   margin-top: 15rem; */
+}
+
+
+/* FEATURES */
+.features {
+  height: 100%;
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+  
+  width: 100%;
+  
+  min-width: 320px;
+  min-height: 480px;
+}
+@media(min-width: 768px) {
+  .features {
+    font-size: 0;
+    
+    max-width: 1080px;   
+    
+    margin: 0 auto;
+  }
+}
+@media(min-height: 500px) {
+  .features {
+    padding: 10% 0;
+  }
+}
+@media(min-height: 725px) {
+  
+}
+
+.features__element {
+  height: 16.666666666666666%;
+  margin: 0;
+  width: 100%;
+
+  display: block;
+  
+  font-size: 1rem;
+  
+  vertical-align: middle;
+  
+  position: relative;
+}
+@media(min-width: 768px) {
+  .features__element {
+    width: 33.33333333%;
+    height: 50%;
+    
+    font-size: 1rem;
+    
+    display: inline-block;
+  }
+}
+
+.features__paragraph {
+  text-align: left;
+  
+  height: 50px;
+  line-height: 50px;
+
+  margin: 0;
+  
+  display: inline-block;
+  width: 225px;
+  
+  left: 65px;
+  
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 65px;
+}
+@media(min-width: 544px) {
+  .features__paragraph {
+    width: 400px;
+  }
+}
+@media(min-width: 768px) {
+  .features__paragraph {
+    text-align: center;
+    line-height: 25px;
+    
+    
+    
+    height: 50px;
+    width: 225px;
+    
+    left: 0;
+    top: 50px;
+  }
+}
+
+.features__element:before {
+  
+  content: "";
+  display: block;
+  height: 45px;
+  width: 45px;
+
+  background-repeat: no-repeat;
+  
+  background-position: center center;
+  
+  margin: auto;
+  position: absolute;
+  
+  top: 0;
+  right: 250px;
+  bottom: 0;
+  left: 0;
+}
+@media(min-width: 544px) {
+  .features__element:before {
+    right: 425px;
+  }
+}
+@media(min-width: 768px) {
+  .features__element:before {
+    right: 0;
+    bottom: 50px;
+  }
+}
+
+.features__element--one:before {
+  background-image: url('http://image.flaticon.com/icons/svg/167/167486.svg');
+}
+.features__element--two:before {
+  background-image: url('http://image.flaticon.com/icons/svg/148/148795.svg');  
+}
+.features__element--three:before {
+  background-image: url('http://image.flaticon.com/icons/svg/148/148824.svg');  
+}
+.features__element--four:before {
+  background-image: url('http://image.flaticon.com/icons/svg/148/148943.svg'); 
+}
+.features__element--five:before {
+  background-image: url('http://image.flaticon.com/icons/svg/148/148799.svg');  
+}
+.features__element--six:before {
+  background-image: url('http://image.flaticon.com/icons/svg/138/138687.svg');  
+}
+
+
+.icon {
+  display: inline-block;
+  content: "";
+  height: 45px;
+  width: 45px;
+  background-image: url('http://image.flaticon.com/icons/svg/167/167486.svg');
+}
+
+
+
+/* FOOTER */
+
+footer {
+  position: relative;
+  padding: 1rem 0;
+  height: 100%;
+  color: #fff;
   background-color: #29303a;
   
   min-width: 320px;
   min-height: 480px;
 }
 
-header {
-  min-height: 100%;
-  padding: 1rem 0;
-/*   position: relative; */
+.footer__container {
+/*   height: 168px; */
+  height: 231px;
+  padding: 0 1.1rem;
 }
 
-.container {
-  padding: 0 7%;
+.footer__logo {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin: 0 auto 2.5rem;
 }
-
-.container2 {
-/*   background-color: #2e353e; */
-  background-color: #313842;
-  width: 100%;
-/*   height: 320px; */
-  margin: 5% 0;
-/*   padding: 5% 0; */
-}
-@media (min-height: 550px) {
-  .container2 {
-    padding: 5% 0;
-    margin: 10% auto;
+@media (min-width: 768px) {
+  .footer__logo {
+    font-size: 3rem;
   }
 }
 
-.logo {
-  font-family: 'Lato', sans-serif;
-  font-weight: 700;
-  text-align: center;
-  font-size: 32px;
-/*   margin: .5rem auto 1.5rem; */
-  margin: 5% auto 15%rem;
+.footer__intro {
+  font-size: 2.2rem;
+  margin: 3rem auto 0;
 }
 
-.intro {
-  font-size: 34px;
+.footer__summary {
   font-weight: 400;
-/*   margin: 1.5rem auto 0; */
-  margin: 10% auto 0;
-}
-
-.intro--date {
-  font-size: 12px;
-  font-weight: 400;
-  margin: 0 auto;
-/*   margin-bottom: 10%; */
-}
-
-
-
-.sample {
-  width: 100%;
-  max-width: 320px;
-/*   border: 1px solid white;
-  border-radius: 10px; */
-  margin: 0 auto;
-/*   padding: 15px; */
-}
-
-
-/* // FORM CLASSES // */
-
-.signup {
-  width: 100%;
-  margin: 0 auto;
-/*   background-image: url('../img/sample.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain; */
-  
-/*   bottom: 0; */
-/*   border: 1px solid red; */
-/*   height: 193px; */
-/*   width: 86%; */
-  height: auto;
-  
-/*   padding-top: 325px; */
-  
-  
-/*   margin: 3rem auto 0; */
-  
-/*   position: absolute;
-  bottom: 5%; */
-/*   left: 0; */
-  
-/*   -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25);
-  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25);
-  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25); */
-}
-
-.signup__fieldset {
-  border: 0;
-  padding: 0;
-  margin: 0 auto;
-  width: 100%;
-/*   position: absolute;
-  bottom: 0; */
-/*   left: 0; */
-
-/*   border-radius: 10px; */
-/*   font-size: 0; */
-}
-
-.signup__input {
-  padding: 15px 10px;
-  border: 0;
   font-size: 1rem;
-  text-align: center;
-/*   vertical-align: middle; */
+  line-height: 1.5rem;
+  margin: 0 auto;
+  
+/*   padding: 1rem; */
+/*   margin: 3rem auto 2rem; */
+}
+@media (min-width: 544px) {
+  .footer__summary {
+    max-width: 500px;
+    font-size: 1.2rem;
+    line-height: 1.75rem;
+  }
+}
+
+.social_container {
+  background-color: #fff;
+  color: #000;
+  position: absolute;
+  bottom: 1rem;
   width: 100%;
-  
-/*     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25);
-  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25);
-  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.25); */
+/*   max-width: 1080px; */
+}
+@media (min-width: 768px) {
+  .social_container {
+    padding: 0 2rem;
+  }
 }
 
-.signup__input--streamer {
-  color: #666;
-  
-/*   border-top-left-radius: 10px;
-  border-top-right-radius: 10px; */
+.social_slogan {
+  font-size: 1rem;
+  float: left;
+/*   margin-left: 2rem; */
 }
 
-.signup__input--submit {
-  background-color: #78b400;
-  font-weight: bold;
-  color: #fff;
-  
-  letter-spacing: .15rem;
+.social_nav {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
 
-/*   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px; */
+.social_nav__element {
+  display: inline-block;
+  padding: .2rem;
+}
+@media (min-width: 544px) {
+  .social_nav__element {
+    padding: .5rem;
+    float: right;
+  }
+}
+
+.social__icon {
+  width: 2rem;
+  height: 2rem;
+  margin: 0;
+  vertical-align: middle;
 }
 
 
-
-.statistics--highlight {
+/* UTILITIES & COLORS & ICONS */
+.statistics_highlight {
   color: #83c500;
 }
 
+.statistics_background {
+  background: #78b400;
+}
 
+.absolute_center {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
+.up-to-tablet--hidden {
+  display: none;
+}
+@media(min-width: 768px) {
+  .up-to-tablet--hidden {
+    display: block;
+  }
+}
 
-
-
-
-
-
-
+.hidden-on-mobile {
+  display: none;
+}
+@media (min-width: 544px) {
+  .hidden-on-mobile {
+    display: inline;
+  }
+}
 
 
 
