--- a/css/landing.css
+++ b/css/landing.css
@@ -161,6 +161,7 @@ a.statistics_highlight:active {
   
   width: 90%;
   max-width: 300px;
+
   
   margin: 0 auto;
 }
@@ -182,6 +183,58 @@ a.logo:hover,
 a.logo:active {
   text-decoration: none;
   color: #fff;
+}
+
+a.share:link, 
+a.share:visited, 
+a.share:hover, 
+a.share:active {
+  text-decoration: none;
+  color: #fff;
+  width: 185px;
+  height: 50px;
+  display: inline-block;
+  
+  padding: 0 1rem;
+  border: 1px solid white;
+}
+@media(min-width: 544px) {
+  a.share:link, 
+  a.share:visited, 
+  a.share:hover, 
+  a.share:active {
+    width: 150px;
+    height: 50px;
+  }
+}
+
+a.share--twitter:link, 
+a.share--twitter:visited, 
+a.share--twitter:hover, 
+a.share--twitter:active {
+  background-color: #55acee;
+}
+
+a.share--facebook:link, 
+a.share--facebook:visited, 
+a.share--facebook:hover, 
+a.share--facebook:active {
+  background-color: #3b5998;
+}
+
+img.share {
+  display: inline-block;
+/*   float: left; */
+  height: 48px;
+  width: 48px;
+  float: left;
+}
+
+span.share {
+  display: inline-block;
+  height: 20px;
+  margin: 15px 0;
+  float: left;
 }
 
 .success {
@@ -487,27 +540,34 @@ footer {
 }
 
 .social_cta {
-  background-color: #fff;
-  color: #000;
-  width: 425px;
-  height: 50px;
   
-  margin: auto;
-  position: absolute;
-  top: 100px;
-  right: 0;
-  bottom: 0;
-  left: 0;
+}
+@media(min-width: 544px) {
+  .social_cta {
+    color: #000;
+/*     width: 425px; */
+    height: 100px;
+
+    margin: 1rem auto;
+    font-size: 0;
+  }
+}
+
+.social_cta__nav {
+  list-style-type: none;
+  padding: 0;
 }
 
 /* Stats Social */
 .social_cta__element {
-  display: inline-block;
-  padding: .2rem;
+  font-size: 1rem;
+  margin: .5rem auto;
 }
 @media (min-width: 544px) {
   .social_cta__element {
-    padding: .5rem;
+    padding: .5rem 1rem;
+    display: inline-block;
+    margin: 0 auto;
   }
 }
 
